@@ -73,10 +73,14 @@ information.
 
 <filename> is the path of a configuration file to use where default options and
 interfaces are defined. If not specified, kplex will look for a configuration
-file in your home directory (~/.kplex.conf on GNU/Linux,
-~/Library/Preferences/kplex.ini on Mac), then /etc/kplex.conf and if nothing is
-found will use only command line directives.  Specifying filename as "-"
-disables looking for the default configuration files.
+file in your home directory ~/.kplex.confx, on Mac), then /etc/kplex.conf and
+if nothing is found will use only command line directives.  For backwards
+compatibility with earlier releases, on OSX only kplex will check for a
+configuration file in ~/Library/Preferences/kplex.ini and if found will use this
+in preference to other files but use of a file in this location is deprecated,
+will be unsupported in a future release, and current users of such a file are
+encouraged to relocate it to ~/.kplex.conf.  Specifying filename as "-" disables
+looking for the default configuration files.
 
 <option> is an option specifier for the form:
     <varable>=<value>
